--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
     <!-- Menu Panel -->
     <div class="menu-panel" id="menuPanel">
         <h3 style="color: white; margin-bottom: 20px; text-align: center;">Menu</h3>
-         <a href="https://error401.vercel.app/" target="_blank" class="menu-item" style="text-decoration: none;">
+         <a href="https://htios2590.vercel.app/" target="_blank" class="menu-item" style="text-decoration: none;">
         <i class="fas fa-bolt"></i>
         <span>Home</span>
     </a>
