--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tạo Cấu Hình iOS By 𝙃𝙏 𝙄𝙊𝙎ᯓDev</title>
+
+<!-- Favicon -->
+  <link rel="icon" href="https://sf-static.upanhlaylink.com/img/image_202512316b2ab02ddd85aaff96bb355e1701ee28.jpg" type="image/jpeg">
+  <link rel="shortcut icon" href="https://sf-static.upanhlaylink.com/img/image_202512316b2ab02ddd85aaff96bb355e1701ee28.jpg" type="image/jpeg">
+  <link rel="apple-touch-icon" href="https://sf-static.upanhlaylink.com/img/image_202512316b2ab02ddd85aaff96bb355e1701ee28.jpg">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
     <style>
